Add beverage selector
co-authored-by: Michael Burton <micbur1@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
         <label for="add2">2nd number:</label>
         <input id="add2" class="form-control" type="text">
       </div>
+      <select class="form-control" id="beverage" required>
+        <option></option>
+        <option>Coffee</option>
+        <option>Tea</option>
+        <option>Kombucha</option>
+        <option>Water</option>
+      </select>
       <button type="submit" class="btn">Add!</button>
     </form>
-    <div  class="col-1" id="output">
-
-    </div>
+    <div class="col-1" id="output"></div>
+    <p>Beverage selection:</p>
+    <div class="col-1" id="selectorOP"></div>
   </div>
 </body>
 </html>
