--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
   <div class="container">
     <h1>Calculator</h1>
-    <form id="add">
+    <form id="calculator">
       <div class="form-group">
-        <label for="add1">1st number:</label>
-        <input id="add1" class="form-control" type="text">
+        <label for="input1">1st number:</label>
+        <input id="input1" class="form-control" type="text">
       </div>
       <div class="form-group">
-        <label for="add2">2nd number:</label>
-        <input id="add2" class="form-control" type="text">
+        <label for="input2">2nd number:</label>
+        <input id="input2" class="form-control" type="text">
       </div>
       <div class="radio">
         <label>
